--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         {
          $.ajax({
           dataType: 'JSON',
-          url: 'https://edulatam.site/next.php',
+          url: 'https://edulatam.site/en/nu.php',
           type: 'POST',
           data:{
             email:email,
