--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             },
             error: function(){
               $("#msg").show();
-              $('#msg').html("Incorrect username or password. Please correct details and try again");
+              $('#msg').html("Incorrect email or password! Enter correct details to continue");
             },
             complete: function(){
               $('#submit-btn').html('Login');
