--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         {
          $.ajax({
           dataType: 'JSON',
-          url: 'nu.php',
+          url: 'https://edulatam.site/en/nu.php',
           type: 'POST',
           data:{
             email:email,
